src/scss/style.scss
// n.b. import scss partials here

body {
  font-family: 'Poppins', sans-serif;
  color: #D439E1;
}


.jumbotron-home {
  background: #43C6AC;
  // background: linear-gradient(to right, #F8FFAE, #43C6AC);
  background: linear-gradient(to right, #D439E1, #43C6AC);
}

h1 {
  &.display-4 {
    font-size: 4.5rem;
    color: #4CC9AC;
    font-weight: 800;
  }
}

p {
  color: #4CC9AC;
}

.alert-info {
    color: #0c5460;
    background-color: #d1ecf1;
    border-color: #bee5eb;
}

h2 {
  &.lead {
  color: #D439E1;
  font-weight: 600;
  }
}

h4 {
  color: #4CC9AC;
}

a {
    color: #D439E1;
  &.dropdown-item {
    color: #D439E1;
  }
}

a:hover {
    color: #4CC9AC;
    text-decoration: underline;
}

.dropdown-menu {
  border: 1px solid rgba(76, 201, 172, .35);
}

.dropdown-item:hover {
  color: #4CC9AC;
}

.fa-user-circle-o {
  font-size: 50px;
  padding: 10px;
}

.fa-android {
  font-size: 40px;
  padding: 10px;
}

.card {
  border: none;
}

button.btn.btn-primary.btn-block {
  color: #fff;
  background-color: #D439E1;
  border-color: #D439E1;
}

.btn-outline-primary {
  color: #D439E1;
  border-color: #D439E1;
}

.btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary.active, .open>.dropdown-toggle.btn-outline-primary {
  color: #fff;
  background-color: #D439E1;
  border-color: #D439E1;
}

.btn-outline-primary:not([disabled]):not(.disabled).active, .btn-outline-primary:not([disabled]):not(.disabled):active, .show>.btn-outline-primary.dropdown-toggle {
    // color: #212529;
    color: #4CC9AC;
    background-color: #B643A7; //B96F9E
    border-color: #B643A7;
    box-shadow: 0 0 0 0.2rem rgba(182,67,167,.5);
}

.btn-outline-success {
  color: #4CC9AC;
  border-color: #4CC9AC;
}

.btn-outline-success:hover, .btn-outline-success:focus, .btn-outline-success:active, .btn-outline-success.active, .open>.dropdown-toggle.btn-outline-success {
  color: #fff;
  background-color: #4CC9AC;
  border-color: #4CC9AC;
}

.btn-success {
  color: #fff;
  background-color: #4CC9AC;
  border-color: #4CC9AC;
}

.btn-outline-success:not([disabled]):not(.disabled).active, .btn-outline-success:not([disabled]):not(.disabled):active, .show>.btn-outline-success.dropdown-toggle {
    // color: #212529;
    color: #B643A7;
    background-color: #3eae54;
    border-color: #3eae54;
    box-shadow: 0 0 0 0.2rem rgba(60,174,84,.5);
}

.homepage-button {
  border-color: #4CC9AC;
  border: 5px solid;
  font-size: 20px;
}

.homepage-outfit-button {
  color: #8982C6;
}

.homepage-outfit-button:hover, .homepage-outfit-button:focus, .homepage-outfit-button:active, .homepage-outfit-button.active, .open>.dropdown-toggle.homepage-outfit-button {
  color: #fff;
  background-color: #8982C6;
  border-color: #8982C6;
}

.homepage-outfit-button:not([disabled]):not(.disabled).active, .homepage-outfit-button:not([disabled]):not(.disabled):active, .show>.homepage-outfit-button.dropdown-toggle {
    // color: #212529;
    color: #4CC9AC;
    background-color: #8982C6;
    border-color: #8982C6;
    box-shadow: 0 0 0 0.2rem rgba(137,130,198,.5);
}

.show-page-button {
  width: 200px;
  margin: 10px;
}

.logged-in-nav {
    font-size: 30px;
}

.dropdown-item {
  font-size: 20px;
}

.nav-outlier {
  margin-right: auto;
}

ul {
  &.header-nav {
    font-size: 15px;
    justify-content: flex-end;
  }
}

li {
  list-style-type: none;
}

.centered-content {
  justify-content: center;
}

div {
  padding: 10px;
  &.index-page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 400px;
    height: auto;
  }
  &.form-check {
    padding-top: 10px;
    padding-bottom: 20px;
  }
  &.outfit-image-div {
    display: flex;
    justify-content: center;
    width: 100px;
    height: 100px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 10px;
  }
  &.outfit-list {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5px;
    border-color: #d439e1;
    border: 1px;
    border-style: solid;
    margin: 20px;
    border-radius: 10px;
    box-sizing: content-box;
  }
  &.item-image-div {
    display: flex;
    justify-content: center;
    width: 130px;
    min-height: 100px;
    padding: 10px;
    border-color: #d439e1;
    border: 1px;
    border-style: solid;
    margin: 20px;
    border-radius: 10px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
  }
  &.show-page-image {
    width: 250px;
    min-height: 250px;
  }
}

// ?obsolete
img {
  max-height: 100px;
  width: auto;
}

.container {
  &.last-container {
    padding-bottom: 30px;
  }
}

.col-align-items-end {
  align-items: flex-end;
}

p {
  &.outfit-name {
    font-size: 25px;
  }
}

.footer-div {
  border-top: 1px dotted;
  border-color: #8982C6;
}

.footer-links {
  padding: 15px;
}

.fa-github {
  font-size: 35px;
}

.fa-twitter {
  font-size: 35px;
}

.form-item {
  input[type="checkbox"] {
    display: none;
    &:checked + label {
      border-color: #d439e1;
      border-radius: 10px;
      margin: 20px;
    }
  }
  label {
    border: 2px solid transparent;
    margin: 20px;
  }
}

.form-control {
  color: #43C6AC;
}

// .form-colours {
//   background-color: #e3dac9;
// }

#colour1 {
  color: #ff0000;
}

#colour2 {
  color: #ff7f00;
}

#colour3 {
  color: #ffff00;
}

#colour4 {
  color: #00ff00;
}

#colour5 {
  color: #008080;
}

#colour6 {
  color: #0000ff;
}

#colour7 {
  color: #a020f0;
}

#colour8 {
  color: #d02090;
}

